--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <style>
         main{
             background-image: url(notes/science.jpg);
+            background-size: cover;
             height: 100%;
             width: 100%;
             background-repeat: repeat-x;
@@ -19,6 +20,7 @@
 
         .back{
             background-image: url(notes/science.jpg);
+            background-size: cover;
             height: 100%;
             width: 100%;
             background-repeat: repeat-x;
@@ -31,6 +33,7 @@
         }
         .low{
             background-image: url(notes/science.jpg);
+            background-size: cover;
             height: 100%;
             width: 100%;
             
