--- a/payment_form.html
+++ b/payment_form.html
@@ -8,6 +8,11 @@
     <title>payment form</title>
 </head>
 <body>
+<div class="head">
+    <header>
+        <h1 class="neta">NETAJI SUBHAS UNIVERSITY OF TECHNOLOGY</h1>
+    </header>
+</div>
     <div class="container">
     <h1 class="main_heading">PAYMENT FORM</h1>
     <hr>
@@ -18,7 +23,7 @@
     <P>
         <FIEldset class="area">
             <LEGENd>GENDER *</LEGENd>
-            male <input type="radio" name="gender" id="male" required>
+            male &nbsp;&nbsp; <input type="radio" name="gender" id="male" required>
             female <input type="radio" name="gender" id="female" required>
             
 
@@ -46,6 +51,12 @@
     <p>CARD NUMBER :* <input type="number" name="card number" id="card number" placeholder="1111-0000-1111-0000" required class="area"></p>
     <p> CARD EXPIRY DATE:* <input type="date" name="exp" id="exp" required class="area"></p>
     <p class="submit"> <input type="submit" value="pay now"></p>
+
+    <div class="photo">
+        <p><img src="nsut.png" alt="">
+    </p>
+        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto commodi eaque veritatis corporis, dolores, dolorem necessitatibus fugiat porro tempora reprehenderit eum asperiores facilis veniam. Quos eos, corrupti aspernatur omnis esse quas enim accusantium adipisci. Quisquam reprehenderit iusto modi dolore a illum cum esse et asperiores, vero voluptatem accusantium eum possimus natus eaque nobis sed aspernatur. Tempore neque, obcaecati vel qui tempora fuga deleniti illo nemo harum sed adipisci, ab rem eius veniam eum reprehenderit quibusdam? Perferendis natus molestiae reprehenderit inventore, dolorum itaque officia et. Sed, commodi officiis dolores, facere perspiciatis odio iste in distinctio voluptate mollitia aliquid ex aspernatur quaerat!</p>
+    </div>
 
 </div>
 
